--- a/css/global/global.css
+++ b/css/global/global.css
@@ -36,17 +36,16 @@
   --font-size-md: 1rem;
   --font-size-lg: 1.25rem;
   --font-size-xl: 1.5rem;
-  --font-size-2xl: 1.75rem;
-  --font-size-2-5xl: 2rem;
-  --font-size-3xl: 2.5rem;
-  --font-size-4xl: 3rem;
+  --font-size-2xl: 2rem;
+  --font-size-3xl: 3rem;
+  --font-size-4xl: 4rem;
 
   /* Project-specific fonts */
   --font-sans: "Work Sans", "Roboto", "Segoe UI", "Hind", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   --font-code: "Source Code Pro", monospace;
   --font-serif: "Source Serif 4", "Times New Roman", serif;
-  --font-headings: "Space Grotesk", "Helvetica Neue", Helvetica, Arial,
+  --font-headings: "Funnel Display", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   --font-body: "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
