Fix section css comments

--- a/css/components/section.css
+++ b/css/components/section.css
@@ -1,8 +1,8 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~ */
-/* ~~~ Footer Tempate ~~~ */
+/* ~~~ Section Tempate ~~~ */
 /* ~~~~~~~~~~~~~~~~~~~~~~ */
 
-/* Footer Component Styles */
+/* Section Component Styles */
 
 section {
   min-height: 20vh;
