--- a/components/nav/hide-on-scroll/index.html
+++ b/components/nav/hide-on-scroll/index.html
@@ -29,7 +29,14 @@
       <a href="#contact">Contact</a>
     </div>
 
-    <div style="border: none; padding: 15px 15px 2500px; font-size: 30px; margin-top: 50px">
+    <div
+      style="
+        border: none;
+        padding: 15px 15px 2500px;
+        font-size: 30px;
+        margin-top: 50px;
+      "
+    >
       <p>
         <b
           >This example demonstrates how to hide a navbar when the user starts
