--- a/components/nav/centered/index.html
+++ b/components/nav/centered/index.html
@@ -35,7 +35,7 @@
       .flex__center-y {
         align-items: center;
       }
-      
+
       header {
       }
 
@@ -45,20 +45,22 @@
         font-weight: bold;
         font-size: xx-large;
         aspect-ratio: 1/1;
-        width: 600px;
+        width: 100%;
+        max-width: 600px;
         margin-bottom: 2rem;
+        padding: 1em;
+        text-align: center;
       }
 
       /* Style the floating nav bar */
       .navbar {
-        overflow-x: hidden;
-        height: 4rem;
         gap: 8px;
       }
 
       /* Navigation links */
       .navbar a {
         align-self: center;
+        text-align: center;
         background-color: #111;
         color: white;
         padding: 1rem 2rem;
@@ -75,26 +77,41 @@
       /* Style the content */
       .content {
         text-align: center;
-        width: 600px;
-        margin: 0 auto;
+        width: 100%;
+        max-width: 600px;
+        margin: 1rem auto 0;
       }
 
+      @media screen and (max-width: 768px) {
+        .container {
+          width: 90%;
+        }
+        .navbar {
+          flex-direction: column;
+          width: 100%;
+        }
+        .navbar a {
+          width: 100%;
+        }
+      }
     </style>
   </head>
   <body class="flex flex__column flex__center">
-    <header class="flex flex__column flex__center">
-      <div class="logo flex flex__center">Logo goes here</div>
-      <nav class="navbar flex">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-      </nav>
-    </header>
-    <main class="content">
-      <h2>Centered Navigation Bar</h2>
-      <p>A center-justified site navigation.</p>
-    </main>
+    <div class="container flex flex__column flex__center">
+      <header class="flex flex__column flex__center">
+        <div class="logo flex flex__center">Logo goes here</div>
+        <nav class="navbar flex">
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+        </nav>
+      </header>
+      <main class="content">
+        <h2>Centered Navigation Bar</h2>
+        <p>A center-justified site navigation.</p>
+      </main>
+    </div>
   </body>
 </html>
