--- a/components/nav/centered/index.html
+++ b/components/nav/centered/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CSS Template</title>
+    <title>Centered Navigation Bar</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
@@ -95,8 +95,12 @@
         </nav>
       </header>
       <main class="content">
-        <h2>Centered Navigation Bar</h2>
-        <p>A center-justified site navigation.</p>
+        <section aria-labelledby="component-name">
+          <hgroup>
+            <h1 id="component-name">Centered Navigation Bar</h1>
+            <p>A center-justified site navigation.</p>
+          </hgroup>
+        </section>
       </main>
     </div>
   </body>
