Implement Back to Top demo

--- a/components/nav/back-to-top/index.html
+++ b/components/nav/back-to-top/index.html
@@ -1,11 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Back to Top</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Back to Top</title>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+
+      body {
+        line-height: 1.5;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 700px;
+      }
+
+      header, footer {
+        height: 300px;
+        background-color: dimgray;
+      }
+
+      #back-to-top {
+        display: grid;
+        position: fixed;
+        bottom: 1rem;
+        right: 1rem;
+        place-items: center;
+        padding: 1em;
+        border: 2px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <a name="top"></a>
+      <header></header>
+      <main>
+        <h1>Back to Top</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium,
+          cumque sint suscipit nesciunt non illum sequi delectus! Nulla quisquam
+          eaque impedit molestiae, delectus earum iusto, necessitatibus eligendi
+          dicta, culpa temporibus. Vitae, maxime ipsa quas corrupti deleniti
+          quasi optio quidem, qui voluptatibus quam voluptates deserunt nulla
+          officiis neque quos ipsum dolorem nihil. Quisquam vel quos fugit
+          ratione quas facilis eveniet placeat! Sit officia, rerum suscipit
+          impedit voluptates recusandae sint similique iure praesentium ratione
+          vitae illo dolor cupiditate maiores vero itaque, optio nemo
+          exercitationem dolorum. Vel debitis necessitatibus inventore
+          temporibus veniam beatae? Obcaecati aperiam ducimus numquam aliquam
+          illum doloribus itaque eius sunt laborum quae quis repellendus
+          voluptate maiores blanditiis, possimus provident eos minus vel
+          temporibus aspernatur rem odio eligendi modi magnam? Doloribus.
+          Ducimus voluptatem, quis repudiandae maiores nemo eos. Magnam
+          voluptatum repellendus earum ex repellat ea quam quidem quo aut
+          assumenda, sit tempore dicta dolorum commodi provident quae doloremque
+          itaque rem consequatur? Tempore fugiat distinctio maxime natus cum
+          vitae, harum voluptatem nulla pariatur fugit laudantium amet nobis,
+          ipsum perferendis nemo id at quia rem similique quae facere sunt
+          suscipit? Ab, ad dolore! Atque, hic ad quaerat possimus nobis
+          quibusdam repellat laborum, ipsam ullam molestiae iste, quidem nam
+          maiores sequi praesentium excepturi asperiores accusamus voluptatem
+          quos aperiam nemo maxime fugit quam aspernatur? Voluptatum. Quo eaque
+          aspernatur illo voluptas similique optio sit minus nesciunt. Fugit
+          aperiam at magni dignissimos libero adipisci enim veritatis alias
+          quibusdam aliquid dolorum nesciunt in, nostrum, tempora iste odio!
+          Molestias? Culpa cum corrupti nostrum eius laborum voluptate.
+          Excepturi sit nisi eius ea velit, ab magni ullam cumque omnis
+          veritatis sed atque dolorem. Ad asperiores recusandae nam modi
+          sapiente harum incidunt.
+        </p>
+        <h2>A Heading</h2>
+        <p>
+          Quis mollitia rerum rem sequi, ipsum cum assumenda magnam! Quos sit
+          rerum iure, asperiores dolor ex fugiat sed. Molestiae, vel. Asperiores
+          exercitationem architecto aspernatur perspiciatis accusamus maxime,
+          sint officia maiores. Est harum nemo autem, corrupti incidunt quae
+          iure quis aliquid animi quisquam pariatur minima velit. Cumque
+          deserunt eius, veritatis culpa neque provident dolorum a voluptas vel
+          aut quis maiores facilis.
+        </p>
+        <h3>A Sub-heading</h3>
+        <p>
+          Asperiores, beatae iure! Cum temporibus facilis deserunt possimus
+          pariatur! Soluta facere blanditiis incidunt numquam necessitatibus
+          nemo odio. Mollitia consequatur praesentium iste cumque tempore, illum
+          veniam quasi nemo aperiam magni obcaecati. Voluptate maiores, iusto
+          delectus, itaque tenetur blanditiis rerum explicabo hic eaque aliquid,
+          laudantium consectetur animi maxime at ipsam nam debitis ex.
+          Laudantium earum odit tempore, vero error nulla qui totam. Nisi atque
+          nobis neque facilis corporis quia necessitatibus dolor rerum, tenetur
+          excepturi ut voluptatum molestiae culpa suscipit sapiente, doloremque
+          cum eaque incidunt velit placeat itaque laborum minima assumenda?
+          Aliquam, quisquam.
+        </p>
+
+        <h3>A Sub-heading</h3>
+        <p>
+          Quas saepe exercitationem minus ad consequuntur officia dicta quia
+          dolorem nostrum molestias necessitatibus quam mollitia tempore velit
+          unde reprehenderit odio a reiciendis, soluta voluptatem voluptas
+          dolorum eum minima dolor? Vel. Provident deserunt at asperiores
+          molestiae minus possimus fugiat doloremque ratione delectus suscipit
+          atque laboriosam, eveniet quas dolores eaque ut debitis perspiciatis
+          nihil illum tempora quisquam iste! Fugiat corporis alias est. Id,
+          nobis dolorum nesciunt magnam unde at quis sunt, nemo earum eum
+          excepturi impedit, reiciendis suscipit saepe magni quas error libero
+          sint aliquam accusantium? Aspernatur ullam voluptate molestiae saepe
+          repellat.
+        </p>
+
+        <h3>A Sub-heading</h3>
+        <p>
+          Inventore quisquam id ex cumque impedit saepe necessitatibus? Autem
+          nesciunt, consectetur fugiat quasi iste esse dolore aspernatur,
+          corrupti qui sint itaque. Ducimus maxime voluptatibus cum vero quam
+          ipsa optio recusandae. Quisquam at nihil possimus nostrum porro eaque
+          vero dignissimos veritatis maiores libero ad deleniti aliquam adipisci
+          laborum cum quibusdam similique aperiam quo, odio autem, accusantium
+          quasi laboriosam? Optio, nostrum voluptas? Soluta quasi odio error
+          molestiae tenetur iusto tempora nisi mollitia veniam exercitationem.
+          Nostrum asperiores consequuntur nesciunt mollitia cum a veniam, ab
+          quos? Sapiente cum natus sunt aperiam iste asperiores. Dolor.
+        </p>
+      </main>
+      <footer></footer>
+    </div>
+    <div id="back-to-top"><a href="#top">Back To Top</a></div>
+  </body>
 </html>
