--- a/components/nav/back-to-top/index.html
+++ b/components/nav/back-to-top/index.html
@@ -36,6 +36,7 @@
         place-items: center;
         padding: 1em;
         border: 2px solid black;
+        background-color: white;
       }
     </style>
   </head>
