Add a linked page to demonstrate local storage functionality for light-dark mode; Add h1 stylel; Check for all input modes and apply checked attribute to active mode; Add console messages

--- a/components/switches/light-dark/link.html
+++ b/components/switches/light-dark/link.html
@@ -12,9 +12,7 @@
   <body>
     <div class="background-gradient"></div>
 
-    <h1>Main Page</h1>
-    <p><a href="link.html">Linked Page</a></p>
-
+    <h1>Linked Page</h1>
     <!-- RADIOS -->
     <fieldset>
       <legend>Select a color mode:</legend>
