Improve clamped font sizing

--- a/css/typography/typography.css
+++ b/css/typography/typography.css
@@ -20,6 +20,7 @@
 --font-size-032: 2rem;
 --font-size-036: 2.25rem;
 --font-size-040: 2.5rem;
+--font-size-044: 2.75rem;
 --font-size-048: 3rem;
 --font-size-056: 3.5rem;
 --font-size-064: 4rem;
