--- a/css/debug/debug.css
+++ b/css/debug/debug.css
@@ -1,5 +1,10 @@
 /* ~~~ DEBUG STYLES ~~~ */
 
+*:focus {
+  outline: 2px solid red;
+  border-style: dashed;
+}
+
 .debug-border {
   border: 1px solid salmon;
 }
